@startuml
    enum org.livegrios.jpyll.model.Type
    {
        Int
        Float
        String
        Boolean
    }

    class org.livegrios.jpyll.model.PythonParameter
    {
        # String name
        # Type type
        # Object value
        --
        + PythonParameter()
        + PythonParameter(String name, Type type, Object value)
        --
        + Getters - Setters Methods
    }
    
    class org.livegrios.jpyll.model.PythonScript
    {
        # String shortName
        # String description
        # String filePath
        # String action
        # List<PythonParameter> parameters
        --
        + PythonScript()
        + PythonScript(String filePath, String description, String action)
    }

    class org.livegrios.jpyll.model.PythonEnvironment
    {
        # String pythonPath
        # String pythonBinPath
        --
        public PythonEnvironment()
        public PythonEnvironment(String pythonPath, String pythonBinPath)
        --
        + Getters - Setters Methods
    }

    interface org.livegrios.jpyll.PythonListener
    {
        + void onReady()
        + void onMessage(String message)
        + void onFinish() 
        + void onException(Exception ex)
    }

    abstract class org.livegrios.jpyll.PythonProcess
    {
        + {static} PythonProcess build(PythonEnvironment pyenv, PythonScript pythonScript, PythonListener listener)
        + void start()
    }

    Type *-- PythonParameter
    PythonParameter o-- PythonScript
    PythonProcess -- PythonListener
    PythonProcess -- PythonEnvironment
    PythonProcess -- PythonScript
    PythonProcess -- PythonParameter
    
@enduml